--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,7 +47,7 @@ services:
     ports:
       - "5432:5432"
     environment:
-      POSTGRES_DB: mydb
+      POSTGRES_DB: loadtestdemodb
       POSTGRES_USER: user
       POSTGRES_PASSWORD: password
       TZ: Asia/Seoul
