--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=demo
 
 # 데이터베이스 설정
-spring.datasource.url=jdbc:postgresql://db:5432/mydb
+spring.datasource.url=jdbc:postgresql://db:5432/loadtestdemodb
 spring.datasource.username=user
 spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
