--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
 
   db:
     image: postgres:15
-    container_name: postgres-db
+    container_name: loadtest-postgres
     restart: always
     ports:
       - "5432:5432"
